自己的轮询算法

--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.ys.entities
+  type-aliases-package: com.springcloud.entities
 eureka:
   client:
     register-with-eureka: true
