Fallback in Client

--- a/cloud-consumer-feign-hystrix-order80/src/main/resources/application.yml
+++ b/cloud-consumer-feign-hystrix-order80/src/main/resources/application.yml
@@ -21,7 +21,10 @@ feign:
         ConnectTimeOut: 5000
         #指建立连接后从服务端读取到可用资源所用的时间
         ReadTimeOut: 5000
+  hystrix:
+    enabled: true
 
 logging:
   level:
     com.springcloud.service.PaymentFeitgnService: debug
+
