--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <module>cloud-provider-payment8002</module>
       <module>cloud-consumer-feign-order80</module>
       <module>cloud-consumer-feign-hystrix-order80</module>
+      <module>cloud-consumer-hystrix-dashboard9001</module>
   </modules>
 
   <properties>
