cloud stream receive

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
       <module>cloud-steam-rabbitmq-provider8801</module>
     <module>cloud-steam-rabbitmq-consumer8802</module>
     <module>cloud-steam-rabbitmq-consumer8803</module>
+      <module>cloud-stream-rabbitmq-consumer8802</module>
   </modules>
 
   <properties>
