--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <module>cloud-steam-rabbitmq-consumer8802</module>
     <module>cloud-steam-rabbitmq-consumer8803</module>
       <module>cloud-stream-rabbitmq-consumer8802</module>
+      <module>cloud-stream-rabbitmq-consumer8803</module>
   </modules>
 
   <properties>
