NACOS Config Group

--- a/cloudalibaba-config-nacos-client3377/src/main/resources/bootstrap.yml
+++ b/cloudalibaba-config-nacos-client3377/src/main/resources/bootstrap.yml
@@ -11,6 +11,7 @@ spring:
       config:
         server-addr: localhost:8848
         file-extension: yaml
+        group: TEST_GROUP
 
 #${spring.application.name}-${spring.profile.active}.${spring.cloud.nacos.config.file-extension}
 #cloud-config-alibaba-dev.yaml
