NACOS Config namespace

--- a/cloudalibaba-config-nacos-client3377/src/main/resources/bootstrap.yml
+++ b/cloudalibaba-config-nacos-client3377/src/main/resources/bootstrap.yml
@@ -11,7 +11,8 @@ spring:
       config:
         server-addr: localhost:8848
         file-extension: yaml
-        group: TEST_GROUP
+        #group: TEST_GROUP
+        namespace: dev
 
 #${spring.application.name}-${spring.profile.active}.${spring.cloud.nacos.config.file-extension}
 #cloud-config-alibaba-dev.yaml
